--- a/registration-form.html
+++ b/registration-form.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registration Form</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <h1>Registration Form</h1>
-  <p>Please fill out this form with the required information</p>
-  <form action="https://register-demo.freecodecamp.org" method="POST">
-
-  </form>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registration Form</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1>Registration Form</h1>
+    <p>Please fill out this form with the required information</p>
+    <form action="https://register-demo.freecodecamp.org" method="POST">
+      <fieldset></fieldset>
+        <label></label>
+        <label></label>
+        <label></label>
+        <label></label>
+      <fieldset></fieldset>
+      <fieldset></fieldset>
+    </form>
+  </body>
 </html>
