--- a/registration-form.html
+++ b/registration-form.html
@@ -11,12 +11,32 @@
     <p>Please fill out this form with the required information</p>
     <form action="https://register-demo.freecodecamp.org" method="POST">
       <fieldset>
-        <label for="first-name">Enter Your First Name: <input id="first-name"/ type="text" required></label>
-        <label for="last-name">Enter Your Last Name: <input id="last-name" type="text" required/></label>
-        <label for="email">Enter Your Email: <input  id="email" type="email" required/></label>
-        <label for="new-password">Create a New Password: <input id="new-password" type="password" required pattern="[a-z0-5]{8,}"/></label>
-      </fieldset>        
-      <fieldset></fieldset>
+        <label for="first-name"
+          >Enter Your First Name: <input id="first-name"/ type="text"
+          required></label
+        >
+        <label for="last-name"
+          >Enter Your Last Name: <input id="last-name" type="text" required
+        /></label>
+        <label for="email"
+          >Enter Your Email: <input id="email" type="email" required
+        /></label>
+        <label for="new-password"
+          >Create a New Password:
+          <input
+            id="new-password"
+            type="password"
+            required
+            pattern="[a-z0-5]{8,}"
+        /></label>
+      </fieldset>
+      <fieldset>
+        <legend>Account type (required)</legend>
+        <label for="personal-account"><input type="radio" name="account-type" checked id="personal-account"/> Personal</label
+        >
+        <label for="business-account"><input type="radio" name="account-type" id="business-account"/> Business</label>
+        <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+      </fieldset>
       <fieldset></fieldset>
       <input type="submit" value="Submit" />
     </form>
