complete the account type

--- a/registration-form.html
+++ b/registration-form.html
@@ -12,7 +12,7 @@
     <form action="https://register-demo.freecodecamp.org" method="POST">
       <fieldset>
         <label for="first-name"
-          >Enter Your First Name: <input id="first-name"/ type="text"
+          >Enter Your First Name: <input id="first-name" type="text"
           required></label
         >
         <label for="last-name"
