add public folder with a favicon image inside

--- a/registration-form.html
+++ b/registration-form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registration Form</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="/public/myfavicon.jpg" type="image/jpg">
   </head>
   <body>
     <h1>Registration Form</h1>
@@ -37,8 +38,13 @@
         <label for="business-account"><input type="radio" name="account-type" id="business-account"/> Business</label>
         <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
       </fieldset>
-      <fieldset></fieldset>
+      <fieldset>
+        <label>upload a profile picture:
+          <input type="file"/>
+        </label>
+        <label>Input your age (years): <input type="number" min="13" max="120"/></label>
+      </fieldset>
       <input type="submit" value="Submit" />
-    </form>
+    </form>    
   </body>
 </html>
