--- a/registration-form.html
+++ b/registration-form.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="The best way to understand the HTML form" />
+    <meta name="description" content="width=device-width, initial-scale=1.0" />
     <title>Registration Form</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="/public/myfavicon.jpg" type="image/jpg">
+    <link rel="icon" href="/public/images/myfavicon.jpg" type="image/jpg" sizes="16x16 32x32">
   </head>
   <body>
     <h1>Registration Form</h1>
