--- a/registration-form.html
+++ b/registration-form.html
@@ -44,8 +44,16 @@
           <input type="file"/>
         </label>
         <label>Input your age (years): <input type="number" min="13" max="120"/></label>
+        <select>
+          <option></option>
+          <option></option>
+          <option></option>
+          <option></option>
+          <option></option>
+        </select>
       </fieldset>
       <input type="submit" value="Submit" />
-    </form>    
+    </form>
+    
   </body>
 </html>
