--- a/registration-form.html
+++ b/registration-form.html
@@ -15,13 +15,13 @@
       <fieldset>
         <label for="first-name"
           >Enter Your First Name: <input id="first-name" type="text"
-          required></label
+          required name="firstname"></label
         >
         <label for="last-name"
-          >Enter Your Last Name: <input id="last-name" type="text" required
+          >Enter Your Last Name: <input id="last-name" type="text" required name="lastname"
         /></label>
         <label for="email"
-          >Enter Your Email: <input id="email" type="email" required
+          >Enter Your Email: <input id="email" type="email" required name="email"
         /></label>
         <label for="new-password"
           >Create a New Password:
@@ -30,6 +30,7 @@
             type="password"
             required
             pattern="[a-z0-5]{8,}"
+            name="newpassword"
         /></label>
       </fieldset>
       <fieldset>
@@ -37,13 +38,13 @@
         <label for="personal-account"><input type="radio" name="account-type" checked id="personal-account"/> Personal</label
         >
         <label for="business-account"><input type="radio" name="account-type" id="business-account"/> Business</label>
-        <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+        <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions" name="termsAccepted"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
       </fieldset>
       <fieldset>
         <label for="profile-picture">upload a profile picture:
           <input type="file" id="profile-picture"/>
         </label>
-        <label for="age">Input your age (years): <input type="number" min="13" max="120" id="age"/></label>
+        <label for="age">Input your age (years): <input type="number" min="13" max="120" id="age" name="age"/></label>
         <label for="referrer"> How did you hear about us?
           <select id="referrer">
             <option value="">(select one)</option>
@@ -54,7 +55,7 @@
           </select>
         </label>
         <label for="bio">Provide a bio: 
-          <textarea id="bio">
+          <textarea id="bio" rows="3" cols="30" placeholder="I like coding on the beach..." name="bio">
 
           </textarea>
         </label>
