--- a/registration-form.html
+++ b/registration-form.html
@@ -35,9 +35,9 @@
       </fieldset>
       <fieldset>
         <legend>Account type (required)</legend>
-        <label for="personal-account"><input type="radio" name="account-type" checked id="personal-account"/> Personal</label
+        <label for="personal-account"><input class="inline" type="radio" name="account-type" checked id="personal-account"/> Personal</label
         >
-        <label for="business-account"><input type="radio" name="account-type" id="business-account"/> Business</label>
+        <label for="business-account"><input class="inline" type="radio" name="account-type" id="business-account"/> Business</label>
         <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions" name="termsAccepted"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
       </fieldset>
       <fieldset>
