--- a/registration-form.html
+++ b/registration-form.html
@@ -38,7 +38,7 @@
         <label for="personal-account"><input class="inline" type="radio" name="account-type" checked id="personal-account"/> Personal</label
         >
         <label for="business-account"><input class="inline" type="radio" name="account-type" id="business-account"/> Business</label>
-        <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions" name="termsAccepted"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+        <label class="inline" for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions" name="termsAccepted"/>I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
       </fieldset>
       <fieldset>
         <label for="profile-picture">upload a profile picture:
